<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/___qweq"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="354dp"
        android:layout_height="217dp"
        android:background="@drawable/text_border"
        android:fontFamily="sans-serif"
        android:text=""
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        android:id="@+id/clear_text"
        android:layout_width="263dp"
        android:layout_height="60dp"
        android:background="@drawable/button_border"
        android:shadowColor="#000000"
        android:text="@string/c"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/minus_button"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="87dp"
        android:layout_height="60dp"
        android:background="@drawable/button_border"
        android:text="@string/_plus"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/zero_text"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:background="@drawable/button_border"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872" />

    <Button
        android:id="@+id/equals"
        android:layout_width="87dp"
        android:layout_height="60dp"
        android:background="@drawable/button_border"
        android:shadowColor="#000000"
        android:text="@string/_equals"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872" />

    <Button
        android:id="@+id/six_text"
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:background="@drawable/button_border"
        android:text="@string/_6"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <Button
        android:id="@+id/div_button"
        android:layout_width="87dp"
        android:layout_height="60dp"
        android:background="@drawable/button_border"
        android:text="@string/_deriv"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <Button
        android:id="@+id/dot_text"
        android:layout_width="87dp"
        android:layout_height="60dp"
        android:background="@drawable/button_border"
        android:text="@string/_dot"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872" />

    <Button
        android:id="@+id/three_text"
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:background="@drawable/button_border"
        android:text="@string/_3"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <Button
        android:id="@+id/one_text"
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:background="@drawable/button_border"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <Button
        android:id="@+id/multiply_button"
        android:layout_width="87dp"
        android:layout_height="60dp"
        android:background="@drawable/button_border"
        android:text="@string/_multiply"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623" />

    <Button
        android:id="@+id/five_text"
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:background="@drawable/button_border"
        android:text="@string/_5"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <Button
        android:id="@+id/seven_text"
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:background="@drawable/button_border"
        android:text="@string/_7"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/eight_text"
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:background="@drawable/button_border"
        android:text="@string/_8"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/two_text"
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:background="@drawable/button_border"
        android:text="@string/_2"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <Button
        android:id="@+id/four_text"
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:background="@drawable/button_border"
        android:text="@string/_4"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="87dp"
        android:layout_height="60dp"
        android:background="@drawable/button_border"
        android:text="-"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <Button
        android:id="@+id/nine_text"
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:background="@drawable/button_border"
        android:text="9"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>